2011-12-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.14 ========================
	* 

2011-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.13 ========================
	* 

2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	* 

2009-05-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sum.tcl: Fixed poor idiom setting interp result.

2009-05-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* crc32.tcl: Remove unecessary read-type from Trf implementation
	and tidied the critcl code a little. Bump to 1.3.1.

2009-04-21  Andreas Kupries  <andreask@activestate.com>

	* cksum.tcl (::crc::CksumFinal): Added the missing 'unset state'
	* cksum.man: command which caused the memory leak reported by Phil
	* pkgIndex.tcl: Dietz <pedietz@users.sourceforge.net> as
	  [Bug 2686560]. Bumped version to 1.1.3.

2009-03-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* crc32.man:  Add note on feeding crc32 values in as -seed.
	* crc32.test: Tests to ensure -seed usage is as expected.

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-06-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* cksum.pcx: New files. Syntax definitions for the public
	* crc16.pcx: commands of the various crc packages.
	* crc32.pcx:
	* sum.pcx:

2008-04-11  Andreas Kupries  <andreask@activestate.com>

	* crc16.man: Marked name of crc32 up as package.

2008-04-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* crc16.man: document the xmodem command (bug #1895277)

2008-03-09  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
