@@ -6,13 +6,13 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # -------------------------------------------------------------------------
-# RCS: @(#) $Id: crc16.test,v 1.6 2006/10/09 21:41:40 andreas_kupries Exp $
+# RCS: @(#) $Id: crc16.test,v 1.7 2012/01/23 20:28:11 patthoyts Exp $
 
 # -------------------------------------------------------------------------
 
 source [file join \
-	[file dirname [file dirname [file join [pwd] [info script]]]] \
-	devtools testutilities.tcl]
+            [file dirname [file dirname [file join [pwd] [info script]]]] \
+            devtools testutilities.tcl]
 
 testsNeedTcl     8.2
 testsNeedTcltest 1.0
@@ -27,6 +27,39 @@ test crc16-1.0 {crc16 with no parameters } {
     catch {::crc::crc16} result
     string match "wrong # args: *" $result
 } {1}
+
+test crc16-1.1 {crc16 with single parameter} {
+    list [catch {::crc::crc16 abc} err] $err
+} {0 38712}
+
+test crc16-1.2 {crc16 with "--" parameter} {
+    list [catch {::crc::crc16 -- abc} err] $err
+} {0 38712}
+
+test crc16-1.3 {crc16 with leading hyphen data} {
+    list [catch {::crc::crc16 -abc} err] $err
+} {0 64305}
+
+test crc16-1.4 {crc16 with leading hyphen data and option separator} {
+    list [catch {::crc::crc16 -- -abc} err] $err
+} {0 64305}
+
+test crc16-1.5 {crc16 with leading hyphen data and format option} {
+    list [catch {::crc::crc16 -format %04x -abc} err] $err
+} {0 fb31}
+
+test crc16-1.6 {crc16 with leading hyphen data, format option separator} {
+    list [catch {::crc::crc16 -format %04x -- -abc} err] $err
+} {0 fb31}
+
+test crc16-1.7 {crc-ccitt with leading hyphen data} {
+    list [catch {::crc::crc-ccitt -abc} err] $err
+} {0 6110}
+
+test crc16-1.8 {crc-ccitt with leading hyphen data and option separator} {
+    list [catch {::crc::crc-ccitt -- -abc} err] $err
+} {0 6110}
+
 
 # -------------------------------------------------------------------------
 # CRC16 tests
@@ -47,7 +80,7 @@ foreach {n msg expected} {
     "47537"
 } {
     test crc16-2.$n {crc16 and unsigned integer} {
-	list [catch {::crc::crc16 $msg} res] $res
+        list [catch {::crc::crc16 $msg} res] $res
     } [list 0 $expected]
 }
 
@@ -66,7 +99,7 @@ foreach {n msg expected} {
     "0xB9B1"
 } {
     test crc16-3.$n {crc16 as hexadecimal string} {
-	list [catch {::crc::crc16 -format 0x%X $msg} res] $res
+        list [catch {::crc::crc16 -format 0x%X $msg} res] $res
     } [list 0 $expected]
 }
 
@@ -138,7 +171,7 @@ foreach {n msg expected} {
     "0xAAA4"
 } {
     test crc16-6.$n {crc-ccitt and unsigned integer} {
-	list [catch {::crc::crc-ccitt -format 0x%X $msg} res] $res
+        list [catch {::crc::crc-ccitt -format 0x%X $msg} res] $res
     } [list 0 $expected]
 }
 
@@ -161,7 +194,7 @@ foreach {n msg expected} {
     "0xB0E8EEE5"
 } {
     test crc16-7.$n {crc-32 from the crc16 algorithms} {
-	list [catch {::crc::crc-32 -format 0x%X $msg} res] $res
+        list [catch {::crc::crc-32 -format 0x%X $msg} res] $res
     } [list 0 $expected]
 }
 
@@ -186,7 +219,7 @@ foreach {n msg expected} {
     "0x2E64"
 } {
     test crc16-8.$n {XMODEM CRCs as hexadecimal string} {
-	list [catch {::crc::xmodem -format 0x%X $msg} res] $res
+        list [catch {::crc::xmodem -format 0x%X $msg} res] $res
     } [list 0 $expected]
 }
 # -------------------------------------------------------------------------
