@@ -1,3 +1,7 @@
+2012-01-23  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* crc16: bug #3477684: handle data with leading hyphen.
+
 2011-12-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
